--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.qingtian</groupId>
 	<artifactId>codegenerator</artifactId>
-	<version>1.0.0</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<!-- 
 		http://localhost:8080/helloboot-0.0.1-SNAPSHOT/send
 	 -->
